force-app/main/default/objects/Agency_Onboarding__c/Agency_Onboarding__c.object-meta.xml
<CustomObject>
    <label>Agency Onboarding</label>
    <nameField>
        <displayFormat>BRN-{00000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>