force-app/main/default/objects/Agency_Onboarding__c/fields/Authorized_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Email__c</fullName>
    <label>Authorized Signatory Email</label>
    <type>Email</type>
</CustomField>