force-app/main/default/objects/Agency_Onboarding__c/fields/Authorized_Signatory_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Mobile__c</fullName>
    <label>Authorized Signatory Mobile</label>
    <type>Phone</type>
</CustomField>