force-app/main/default/objects/Agency_Onboarding__c/fields/Beneficiary_name_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_name_Account_Holder_Name__c</fullName>
    <label>Beneficiary name/Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>