force-app/main/default/objects/Agency_Onboarding__c/fields/BRN_No__c.field-meta.xml
<CustomField>
    <fullName>BRN_No__c</fullName>
    <label>BRN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>