force-app/main/default/objects/Agency_Onboarding__c/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>