force-app/main/default/objects/Agency_Onboarding__c/fields/Company_Alternate_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Alternate_Email_1__c</fullName>
    <label>Company Alternate Email:1</label>
    <type>Email</type>
</CustomField>