force-app/main/default/objects/Agency_Onboarding__c/fields/Company_Alternate_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Alternate_Email_2__c</fullName>
    <label>Company Alternate Email:2</label>
    <type>Email</type>
</CustomField>