force-app/main/default/objects/Agency_Onboarding__c/fields/Company_Official_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Official_Phone_No__c</fullName>
    <label>Company (Official) Phone No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>