force-app/main/default/objects/Agency_Onboarding__c/fields/Company_Registration_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Expiry_Date__c</fullName>
    <label>Company Registration Expiry Date</label>
    <type>Date</type>
</CustomField>