force-app/main/default/objects/Agency_Onboarding__c/fields/Company_RERA_Registration_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Company_RERA_Registration_Expiry__c</fullName>
    <label>Company RERA Registration Expiry</label>
    <type>Date</type>
</CustomField>