force-app/main/default/objects/Agency_Onboarding__c/fields/Company_Trade_License_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Trade_License_Registration_Type__c</fullName>
    <label>Company/Trade License Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Free Zone</fullName>
            </value>
            <value>
                <fullName>Mainland</fullName>
            </value>
            <value>
                <fullName>Dubai Economic Department - Mainland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>