force-app/main/default/objects/Agency_Onboarding__c/fields/Compnay_ORN_RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>Compnay_ORN_RERA_Number__c</fullName>
    <label>Company ORN/RERA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>