force-app/main/default/objects/Agency_Onboarding__c/fields/Date_of_registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_registration__c</fullName>
    <formula>IF(
    ISPICKVAL(Onboarding_Stage__c, &quot;Approved&quot;),
    TEXT(NOW()),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of registration</label>
    <type>Text</type>
</CustomField>