force-app/main/default/objects/Agency_Onboarding__c/fields/Date_Of_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Registrations__c</fullName>
    <label>Date Of Registration</label>
    <type>Date</type>
</CustomField>