force-app/main/default/objects/Agency_Onboarding__c/fields/Emirates_No__c.field-meta.xml
<CustomField>
    <fullName>Emirates_No__c</fullName>
    <label>Emirates ID number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>