force-app/main/default/objects/Agency_Onboarding__c/fields/Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Stage__c</fullName>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Documents Pending</fullName>
            </value>
            <value>
                <fullName>Documents Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
                <isActive>false</isActive>
                <label>Onboarded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>