force-app/main/default/objects/Agency_Onboarding__c/fields/OwnerShip__c.field-meta.xml
<CustomField>
    <fullName>OwnerShip__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietary</fullName>
                <default>true</default>
                <label>Sole Proprietary</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>