force-app/main/default/objects/Agency_Onboarding__c/fields/Pending_Documents__c.field-meta.xml
<CustomField>
    <fullName>Pending_Documents__c</fullName>
    <label>Pending Documents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>