force-app/main/default/objects/Agency_Onboarding__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>