force-app/main/default/objects/Agency_Onboarding__c/fields/Select_Document__c.field-meta.xml
<CustomField>
    <fullName>Select_Document__c</fullName>
    <label>Select Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Cheque Copy</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>