force-app/main/default/objects/Agency_Onboarding__c/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <formula>IF(
ISBLANK( First_Name__c ),
Last_Name__c ,
IF(
ISBLANK( Last_Name__c ),
First_Name__c ,
First_Name__c &amp; &quot; &quot; &amp; Last_Name__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signatory Name</label>
    <type>Text</type>
</CustomField>