force-app/main/default/objects/Agency_Onboarding__c/fields/SORT_Code__c.field-meta.xml
<CustomField>
    <fullName>SORT_Code__c</fullName>
    <label>SORT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>