force-app/main/default/objects/Agency_Onboarding__c/fields/Task_Reason__c.field-meta.xml
<CustomField>
    <fullName>Task_Reason__c</fullName>
    <label>Task Reason</label>
    <type>TextArea</type>
</CustomField>