force-app/main/default/objects/Agency_Onboarding__c/fields/TRN_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>TRN_Expiry_Date__c</fullName>
    <label>TRN Expiry Date</label>
    <type>Date</type>
</CustomField>