force-app/main/default/objects/Agency_Onboarding__c/fields/TRN_NUMBER_VAT__c.field-meta.xml
<CustomField>
    <fullName>TRN_NUMBER_VAT__c</fullName>
    <label>TRN NUMBER (VAT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>