force-app/main/default/objects/Agency_Onboarding__c/validationRules/Company_Registration_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Registration_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Company_Registration_Expiry_Date__c)),
    Company_Registration_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Company_Registration_Expiry_Date__c</errorDisplayField>
    <errorMessage>Company Registration Expiry Date cannot be in the past</errorMessage>
</ValidationRule>