force-app/main/default/objects/Agency_Onboarding__c/validationRules/Company_RERA_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_RERA_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Company_RERA_Registration_Expiry__c)),
    Company_RERA_Registration_Expiry__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Company_RERA_Registration_Expiry__c</errorDisplayField>
    <errorMessage>Company RERA Registration Expiry cannot be in the past</errorMessage>
</ValidationRule>