force-app/main/default/objects/Agency_Onboarding__c/validationRules/Emirates_ID_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_ID_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Emirates_ID_Expiry_Date__c)),
    Emirates_ID_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Emirates_ID_Expiry_Date__c</errorDisplayField>
    <errorMessage>Emirates ID Expiry Date cannot be in the past</errorMessage>
</ValidationRule>