force-app/main/default/objects/Agency_Onboarding__c/validationRules/National_ID_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>National_ID_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(National_Id_Expiry_date__c)),
    National_Id_Expiry_date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>National_Id_Expiry_date__c</errorDisplayField>
    <errorMessage>National ID Expiry Date cannot be in the past</errorMessage>
</ValidationRule>