force-app/main/default/objects/Agency_Onboarding__c/validationRules/Passport_Expiry_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Expiry_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Passport_Expiry_Date__c)),
    Passport_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Passport_Expiry_Date__c</errorDisplayField>
    <errorMessage>Passport Expiry Date cannot be in the past</errorMessage>
</ValidationRule>