force-app/main/default/objects/Agency_Onboarding__c/validationRules/Pending_Document_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Document_is_Required</fullName>
    <active>false</active>
    <description>If Status = &quot;Document Pending&quot;, then Pending Document must be filled</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Onboarding_Stage__c , &quot;Documents Pending&quot;),
        AND(
            ISPICKVAL(PRIORVALUE(Onboarding_Stage__c ), &quot;Documents Pending&quot;),
            NOT(ISPICKVAL(Onboarding_Stage__c , &quot;Documents Pending&quot;))
        )
    ),
    ISBLANK(Pending_Documents__c )
)</errorConditionFormula>
    <errorDisplayField>Pending_Documents__c</errorDisplayField>
    <errorMessage>Pending Document is required when Status is Document Pending.</errorMessage>
</ValidationRule>