force-app/main/default/objects/Agency_Onboarding__c/validationRules/Trade_License_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Trade_License_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Trade_License_Expiry_Date__c)),
    Trade_License_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Trade_License_Expiry_Date__c</errorDisplayField>
    <errorMessage>Trade License Expiry Date cannot be in the past</errorMessage>
</ValidationRule>