force-app/main/default/objects/Agency_Onboarding__c/validationRules/TRN_Expiry_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>TRN_Expiry_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TRN_Expiry_Date__c)),
    TRN_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>TRN_Expiry_Date__c</errorDisplayField>
    <errorMessage>TRN Expiry Date cannot be in the past</errorMessage>
</ValidationRule>