force-app/main/default/objects/Agency_Onboarding__c/validationRules/Visa_Expiry_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Visa_Expiry_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Visa_Expiry_Date__c)),
    Visa_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Visa_Expiry_Date__c</errorDisplayField>
    <errorMessage>Visa Expiry Date cannot be in the past</errorMessage>
</ValidationRule>