force-app/main/default/objects/Agency_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Onboarding_Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email__c</columns>
    <columns>Trade_License_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>