force-app/main/default/objects/Agency_Onboarding__c/listViews/All_Corporate_Records.listView-meta.xml
<ListView>
    <fullName>All_Corporate_Records</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Company_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Agency_Onboarding__c.Corporate</value>
    </filters>
    <label>All Corporate Records</label>
</ListView>