force-app/main/default/objects/Agency_Onboarding__c/listViews/THIS_MONTH_Records.listView-meta.xml
<ListView>
    <fullName>THIS_MONTH_Records</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>THIS MONTH Records</label>
</ListView>