force-app/main/default/objects/Agency_Onboarding__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Company_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>